--- a/towerdefence/style.css
+++ b/towerdefence/style.css
@@ -8,6 +8,7 @@ body, html {
     background-color: #f0f0f0;
 }
 
+/* 첫 페이지 */
 #game-init{
     cursor: pointer;
 }
@@ -21,17 +22,57 @@ body, html {
     justify-content: center;
     align-items: center;
 }
+#game-id{
+
+}
+#game-init{
+
+}
+
+/* 메인 페이지 */
+#status-bar{
+    display: flex;
+    justify-content:center;
+    position: relative;
+}
+
+#nickname-area{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 30px;
+    background-color: #6f4f28;
+    border-radius: 5px;
+    margin: 0;
+}
+
+#nickname{
+    color: white;
+    width: 130px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+#nickname-edit-icon{
+    cursor: pointer;
+    width:16px;
+    height: 16px;
+}
 
 #coin-status{
     background-color: #6f4f28;
     color: white;
-    align-self: self-end;
     height: 30px;
     width: 100px;
     text-align: center;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border: 1px solid white;
+    position: absolute;
+    left: 50%;
+    transform: translateX(300px);
 }
 
 #mainCanvas {
@@ -43,10 +84,9 @@ body, html {
     background-color: #333333;
 }
 
-#gameCanvas {
-    width: 100%;
-    height: 100%;
-    background-color: #333333;
+#nickname-edit-icon{
+    width:16px;
+    height:16px
 }
 
 #game-list {
@@ -68,6 +108,7 @@ body, html {
     color: white;
 }
 
+/* 상점화면 */
 #shopCanvas {
     width: 100%;
     height: 100%;
@@ -80,4 +121,57 @@ body, html {
     background-color: #6f4f28;
     color: white;
     font-size: large;
+}
+
+/* 게임화면 */
+#game-play-container{
+    width: 800px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+}
+#game-info {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    position: relative;
+
+}
+
+#game-status-info{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
+    background-color: #6f4f28;
+}
+
+#controls{
+    display: flex;
+    justify-content: end;
+    background-color: #6f4f28;
+}
+
+#gameCanvas {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #6f4f28;
+    width: 100%;
+    height: 100%;
+}
+
+
+button {
+    padding: 10px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
 }
