--- a/towerdefence/style.css
+++ b/towerdefence/style.css
@@ -165,13 +165,10 @@ body, html {
 }
 
 
-button {
+.game-button {
     padding: 10px;
     margin: 5px;
     cursor: pointer;
-}
-
-canvas {
-    width: 100%;
-    height: 100%;
+    background-color: #a37c4c;
+    color: white;
 }
